--- a/dv/index.html
+++ b/dv/index.html
@@ -17,6 +17,12 @@
       <button class="button gray" data-value="+/-">+/-</button>
       <button class="button gray" data-value="%">%</button>
       <button class="button orange" data-value="/">÷</button>
+      <button class="button gray" data-value="cos">cos</button>
+      <button class="button gray" data-value="sin">sin</button>
+      <button class="button gray" data-value="tan">tan</button>
+      <button class="button orange
+      "" data-value="√">√</button>
+      <button class="button gray" data-value="^">xⁿ</button>
       <!-- Row 2 -->
       <button class="button" data-value="7">7</button>
       <button class="button" data-value="8">8</button>
@@ -35,7 +41,9 @@
       <!-- Row 5 -->
       <button class="button wide" data-value="0">0</button>
       <button class="button" data-value=".">.</button>
-      <button class="button orange" data-value="=">=</button>
+      <button class="button wides" data-value="=">=</button>
+    
+    
     </div>
   </div>
   <script src="script/script.js"></script>
